# matexp

./: .gitignore  DETAILS.md  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.cfg
backward_euler/: __main__.py
figures/: ap_plot.py  ap_run.sh  ap_sim.py  benchmark.py  complexity_plot.py  complexity_run.sh  complexity_sim.py  err_plot.py  err_run.sh  error_distribution.py  f32_run.sh  gpu_install.sh  gpu_plot.py  gpu_run.sh  gpu_sim.py  hh_markov.mod  hh_plot.py  hh_run.sh  hh_sim.py  install.sh  logarithmic_transform.py  menon2009.py  nav_fsm_diagram.odg  nav_fsm_diagram.xcf  presyn.mod  propagator_matrix.py  propagator_run.py  run_all.sh  speed_plot.py  speed_run.sh  speed_vs_accuracy.py  time_vs_space.py  utils.py
lti_sim/: __init__.py  __main__.py  approx.py  cache.py  codegen.py  inputs.py  lti_model.py  nmodl_compiler.py  optimizer.py  polynomial.py  tables.py
matexp/: __init__.py  __main__.py  approx.py  codegen.py  convolve.py  inputs.py  lti_model.py  manual.py  nmodl_compiler.py  optimizer.py  polynomial.py
mod/: AMPA_13state.mod  KCNQ5_11state.mod  KCNQ5_13state.mod  KCNQ5_4state.mod  KCNQ5_6state.mod  Kv101_11state.mod  Kv101_13state.mod  Kv101_4state.mod  Kv101_6state.mod  Kv102_11state.mod  Kv102_13state.mod  Kv102_4state.mod  Kv102_6state.mod  Kv11_11state.mod  Kv11_13state.mod  Kv11_4state.mod  Kv11_6state.mod  Kv121_11state.mod  Kv121_4state.mod  Kv123_11state.mod  Kv123_13state.mod  Kv123_4state.mod  Kv123_6state.mod  Kv12_11state.mod  Kv12_13state.mod  Kv12_4state.mod  Kv12_6state.mod  Kv13_11state.mod  Kv13_13state.mod  (+63 more)
(+26 files in other folders)
