[metadata]
name = matexp
version = 0.0.1
description = Simulator for Linear Time-Invariant Kinetic Models using the NMODL file format.
long_description = file: README.md, LICENSE.txt
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
install_requires =
    matplotlib
    NMODL
    numpy
    scipy
